--- a/LibraryManagementApp/MainWindow.xaml
+++ b/LibraryManagementApp/MainWindow.xaml
@@ -103,7 +103,25 @@
                     <Border Style="{StaticResource ErrorBorderStyle}" x:Name="SignUpUsernameErrorBorder" Visibility="Collapsed">
                         <TextBlock x:Name="SignUpUsernameErrorTextBlock" Style="{StaticResource ErrorTextStyle}" />
                     </Border>
+                </StackPanel>
 
+                <!-- Nouveau champ pour l'adresse e-mail -->
+                <StackPanel Margin="0,0,0,10">
+                    <TextBlock Text="Adresse e-mail" Style="{StaticResource LabelTextStyle}"/>
+                    <Border Style="{StaticResource InputBorderStyle}">
+                        <Grid>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="Auto"/>
+                                <ColumnDefinition Width="*"/>
+                            </Grid.ColumnDefinitions>
+                            <Icon:PackIconMaterial Kind="Email" Style="{StaticResource IconStyle}"/>
+                            <TextBox x:Name="SignUpEmailTextBox" Style="{StaticResource InputTextBoxStyle}" Grid.Column="1"/>
+                        </Grid>
+                    </Border>
+
+                    <Border Style="{StaticResource ErrorBorderStyle}" x:Name="SignUpEmailErrorBorder" Visibility="Collapsed">
+                        <TextBlock x:Name="SignUpEmailErrorTextBlock" Style="{StaticResource ErrorTextStyle}" />
+                    </Border>
                 </StackPanel>
 
                 <StackPanel Margin="0,0,0,10">
@@ -131,7 +149,6 @@
                     <Border Style="{StaticResource ErrorBorderStyle}" x:Name="SignUpPasswordErrorBorder" Visibility="Collapsed">
                         <TextBlock x:Name="SignUpPasswordErrorTextBlock" Style="{StaticResource ErrorTextStyle}" />
                     </Border>
-
                 </StackPanel>
 
                 <StackPanel Margin="0,0,0,10">
@@ -159,7 +176,6 @@
                     <Border Style="{StaticResource ErrorBorderStyle}" x:Name="ConfirmPasswordErrorBorder" Visibility="Collapsed">
                         <TextBlock x:Name="ConfirmPasswordErrorTextBlock" Style="{StaticResource ErrorTextStyle}" />
                     </Border>
-
                 </StackPanel>
 
                 <Button Content="S'inscrire" Style="{StaticResource LoginButtonStyle}" Margin="0,10,0,0" Click="SignUpButton_Click"/>
@@ -169,6 +185,54 @@
                     <TextBlock Text="Connectez-vous!" Style="{StaticResource LinkTextStyle}" MouseDown="SignIn_Click"/>
                 </StackPanel>
             </StackPanel>
+
+
+            <!-- Réinitialisation du mot de passe -->
+            <StackPanel x:Name="ResetPasswordPanel" Visibility="Collapsed" HorizontalAlignment="Center" VerticalAlignment="Center" Width="300">
+                <TextBlock Text="Réinitialisation du mot de passe" Style="{StaticResource TitleTextStyle}" Margin="0,0,0,20" TextAlignment="Center" TextWrapping="Wrap"/>
+
+                <StackPanel Margin="0,0,0,10">
+                    <TextBlock Text="Entrez votre adresse e-mail" Style="{StaticResource LabelTextStyle}"/>
+                    <Border Style="{StaticResource InputBorderStyle}">
+                        <TextBox x:Name="ResetEmailTextBox" Style="{StaticResource InputTextBoxStyle}"/>
+                    </Border>
+
+                    <Border Style="{StaticResource ErrorBorderStyle}" x:Name="ResetEmailErrorBorder" Visibility="Collapsed">
+                        <TextBlock x:Name="ResetEmailErrorTextBlock" Style="{StaticResource ErrorTextStyle}" />
+                    </Border>
+                </StackPanel>
+
+                <Button Content="Réinitialiser le mot de passe" Style="{StaticResource LoginButtonStyle}" Click="ResetPasswordButton_Click"/>
+
+                <StackPanel Orientation="Horizontal" Margin="5,10,5,5">
+                    <TextBlock Text="Déjà un compte?" Style="{StaticResource SecondaryTextStyle}"/>
+                    <TextBlock Text=" Connectez-vous!" Style="{StaticResource LinkTextStyle}" MouseDown="SignIn"/>
+                </StackPanel>
+            </StackPanel>
+
+            <!-- Réinitialisation du nom d'utilisateur -->
+            <StackPanel x:Name="ResetUsernamePanel" Visibility="Collapsed" HorizontalAlignment="Center" VerticalAlignment="Center" Width="300">
+                <TextBlock Text="Réinitialisation du nom d'utilisateur" Style="{StaticResource TitleTextStyle}" Margin="0,0,0,20"  TextAlignment="Center" TextWrapping="Wrap"/>
+
+                <StackPanel Margin="0,0,0,10">
+                    <TextBlock Text="Entrez votre adresse e-mail" Style="{StaticResource LabelTextStyle}"/>
+                    <Border Style="{StaticResource InputBorderStyle}">
+                        <TextBox x:Name="ResetUsernameEmailTextBox" Style="{StaticResource InputTextBoxStyle}"/>
+                    </Border>
+
+                    <Border Style="{StaticResource ErrorBorderStyle}" x:Name="ResetUsernameEmailErrorBorder" Visibility="Collapsed">
+                        <TextBlock x:Name="ResetUsernameEmailErrorTextBlock" Style="{StaticResource ErrorTextStyle}" />
+                    </Border>
+                </StackPanel>
+
+                <Button Content="Réinitialiser le nom d'utilisateur" Style="{StaticResource LoginButtonStyle}" Click="ResetUsernameButton_Click"/>
+
+                <StackPanel Orientation="Horizontal" Margin="5,10,5,5">
+                    <TextBlock Text="Déjà un compte?" Style="{StaticResource SecondaryTextStyle}"/>
+                    <TextBlock Text=" Connectez-vous!" Style="{StaticResource LinkTextStyle}" MouseDown="SignIn"/>
+                </StackPanel>
+            </StackPanel>
+
         </Grid>
 
         <StackPanel HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,30,0,0" Grid.Column="1">
@@ -199,11 +263,11 @@
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="0,100,0,0">
                 <TextBlock Text="Mot de passe oublié ?" 
                    Style="{StaticResource LinkTextStyle}"
-                   />
+                   MouseDown="ForgotPassword_MouseDown"/>
                 <TextBlock Text=" | " Foreground="LightGray" />
                 <TextBlock Text="Nom d'utilisateur oublié ?" 
                    Style="{StaticResource LinkTextStyle}"
-                   />
+                   MouseDown="ForgotUsername_MouseDown"/>
             </StackPanel>
         </StackPanel>
 
