--- a/LibraryManagementApp/MainWindow.xaml
+++ b/LibraryManagementApp/MainWindow.xaml
@@ -8,8 +8,9 @@
         mc:Ignorable="d"
         WindowStartupLocation="CenterScreen"
         Title="Connexion - Gestion de Bibliothèque"
-        Height="650"
+        Height="700"
         Width="800"
+        ResizeMode="NoResize"
         Background="{StaticResource BackgroundGradient}">
 
     <!-- Main Layout -->
@@ -83,6 +84,7 @@
                 </StackPanel>
             </StackPanel>
 
+            
             <!-- SignUp View -->
             <StackPanel x:Name="SignUpPanel" Visibility="Collapsed" HorizontalAlignment="Center" VerticalAlignment="Center" Width="300">
                 <TextBlock Text="Inscription" Style="{StaticResource TitleTextStyle}" Margin="0,0,0,20"/>
@@ -235,7 +237,7 @@
 
         </Grid>
 
-        <StackPanel HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,30,0,0" Grid.Column="1">
+        <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0,0,0,50" Grid.Column="1">
             <!-- Logo -->
             <Image Source="Assets/Images/default.png" Width="200" Height="200" HorizontalAlignment="Center" Opacity="0">
                 <Image.Triggers>
